# lzham_codec

./: meson.build  meson_options.txt
lzhamcomp/: meson.build
lzhamdecomp/: lzham_types.h  meson.build
lzhamlib/: meson.build
